update: made the "origins" variable an array so multiple known origins can be added